--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -492,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for num_pt_ptcs in [8]:\n",
+    "for num_pt_ptcs in [8,16,32]:\n",
     "    data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":num_pt_ptcs}\n",
     "    # data_info = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":num_pt_ptcs}\n",
     "    sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
@@ -548,13 +548,13 @@
     "            train_info.update(data_info)\n",
     "            train(model, data_module, train_info, suffix=suffix, graph=False)\n",
     "\n",
-    "        # # classical ML only\n",
-    "        # for go, gh, gl in product([3,6], [16,64,256], [1,2,4]):\n",
-    "        #     model_dict = {\n",
-    "        #         \"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \n",
-    "        #         \"mlp_hidden\":0, \"mlp_layers\":0\n",
-    "        #         }\n",
-    "        #     train_classical(preprocess_mode=\"normalize_pi\", model_dict=model_dict)\n",
+    "        # classical ML only\n",
+    "        for go, gl in product([3,6,9], [1,2,4,8,12]):\n",
+    "            model_dict = {\n",
+    "                \"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":go, \"gnn_layers\":gl, \n",
+    "                \"mlp_hidden\":0, \"mlp_layers\":0\n",
+    "                }\n",
+    "            train_classical(preprocess_mode=\"normalize_pi\", model_dict=model_dict)\n",
     "\n",
     "        # # Trivial GNN\n",
     "        # for gnn_layers, gnn_reupload in product((1,2), (0,1)):\n",
@@ -568,18 +568,18 @@
     "        #     model_dict[\"gnn_measurements\"] = gnn_measurements\n",
     "        #     train_qtrivial(preprocess_mode, model_dict)\n",
     "\n",
-    "        # QFCGNN\n",
-    "        for gnn_layers, gnn_reupload, gnn_nn_qubits in product([2,4], [0,3,6], [3,6]):\n",
-    "            model_class     = QuantumMultiRotFCGNN\n",
-    "            gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
-    "                max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
-    "                max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
-    "            preprocess_mode = \"normalize_pi\"\n",
-    "            # gnn_layers      = parse_args.q_gnn_layers\n",
-    "            # gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "            gnn_num_qnn     = 1\n",
-    "            model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
-    "            train_qfcgnn(preprocess_mode, model_class, model_dict)\n",
+    "        # # QFCGNN\n",
+    "        # for gnn_layers, gnn_reupload, gnn_nn_qubits in product([2,4], [0,3,6], [3,6]):\n",
+    "        #     model_class     = QuantumMultiRotFCGNN\n",
+    "        #     gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "        #         max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
+    "        #         max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
+    "        #     preprocess_mode = \"normalize_pi\"\n",
+    "        #     # gnn_layers      = parse_args.q_gnn_layers\n",
+    "        #     # gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "        #     gnn_num_qnn     = 1\n",
+    "        #     model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "        #     train_qfcgnn(preprocess_mode, model_class, model_dict)\n",
     "\n",
     "        # # Super QFCGNN\n",
     "        # for r in range(4):\n",
