--- a/r_wandb_api_run.ipynb
+++ b/r_wandb_api_run.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20231015\"\n",
+    "date    = \"20231027_091149\"\n",
     "suffix  = \"\"\n",
     "project = \"g_eflow_QFCGNN\"\n",
     "\n",
