--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "# training configuration\n",
     "cf[\"lr\"]                = None\n",
-    "cf[\"rnd_seed\"]          = 3020616\n",
+    "cf[\"rnd_seed\"]          = int(input(\"Set random seed = \"))\n",
     "cf[\"num_train_ratio\"]   = 0.8\n",
     "cf[\"num_bin_data\"]      = 500 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 100 # <-----------------------------------------------\n",
@@ -284,7 +284,7 @@
     "    if cf[\"wandb\"]:\n",
     "        wandb_info[\"project\"]  = cf[\"project\"]\n",
     "        wandb_info[\"group\"]    = f\"{train_info['sig']}_{train_info['bkg']}\"\n",
-    "        wandb_info[\"name\"]     = f\"{train_info['group_rnd']} | {cf['time']}_{cf['device']}_{train_info['rnd_seed']}_{suffix}\"\n",
+    "        wandb_info[\"name\"]     = f\"{train_info['group_rnd']} | {cf['time']}_{cf['device']}_{train_info['rnd_seed']} {suffix}\"\n",
     "        wandb_info[\"id\"]       = wandb_info[\"name\"]\n",
     "        wandb_info[\"save_dir\"] = root_dir \n",
     "        wandb_logger = WandbLogger(**wandb_info)\n",
@@ -351,42 +351,40 @@
     "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "\n",
-    "for rnd_seed in range(3):\n",
-    "    cf[\"rnd_seed\"] = rnd_seed\n",
-    "    L.seed_everything(cf[\"rnd_seed\"])\n",
+    "L.seed_everything(cf[\"rnd_seed\"])\n",
     "\n",
-    "    sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
-    "    bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
-    "    data_suffix = f\"{data_info['abbrev']}_cut{data_info['cut']}_ptc{data_info['num_pt_ptcs']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
+    "sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
+    "bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
+    "data_suffix = f\"{data_info['abbrev']}_cut{data_info['cut']}_ptc{data_info['num_pt_ptcs']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
     "\n",
-    "    def train_model(model_class, model_dict, model_suffix, graph, suffix=\"\"):\n",
-    "        data_module = JetDataModule(sig_events, bkg_events, graph=graph)\n",
-    "        model       = model_class(**model_dict)\n",
-    "        train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"model_suffix\":model_suffix}\n",
-    "        train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{model_suffix} | {data_suffix}\"\n",
-    "        train_info.update(model_dict)\n",
-    "        train_info.update(data_info)\n",
-    "        train_wandb(model, data_module, train_info, graph=graph, suffix=suffix)\n",
+    "def train_model(model_class, model_dict, model_suffix, graph, suffix=\"\"):\n",
+    "    data_module = JetDataModule(sig_events, bkg_events, graph=graph)\n",
+    "    model       = model_class(**model_dict)\n",
+    "    train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"model_suffix\":model_suffix}\n",
+    "    train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{model_suffix} | {data_suffix}\"\n",
+    "    train_info.update(model_dict)\n",
+    "    train_info.update(data_info)\n",
+    "    train_wandb(model, data_module, train_info, graph=graph, suffix=suffix)\n",
     "\n",
-    "    # # classical ML only\n",
-    "    # for gnn_out, gnn_layers in product([3,6,9], [1,2,4,8,12]):\n",
-    "    #     cf[\"lr\"]     =  1E-3\n",
-    "    #     model_dict   = {\"gnn_in\":6, \"gnn_out\":gnn_out, \"gnn_hidden\":gnn_out, \"gnn_layers\":gnn_layers, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
-    "    #     go, gh, gl   = model_dict[\"gnn_out\"], model_dict[\"gnn_hidden\"], model_dict[\"gnn_layers\"]\n",
-    "    #     mh, ml       = model_dict[\"mlp_hidden\"], model_dict[\"mlp_layers\"]\n",
-    "    #     model_suffix = f\"go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml}\"\n",
-    "    #     train_model(model_class=Classical2PCGNN, model_dict=model_dict, model_suffix=model_suffix, graph=True)\n",
+    "# # classical ML only\n",
+    "# for gnn_out, gnn_layers in product([3,6,9], [1,2,4,8,12]):\n",
+    "#     cf[\"lr\"]     =  1E-3\n",
+    "#     model_dict   = {\"gnn_in\":6, \"gnn_out\":gnn_out, \"gnn_hidden\":gnn_out, \"gnn_layers\":gnn_layers, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
+    "#     go, gh, gl   = model_dict[\"gnn_out\"], model_dict[\"gnn_hidden\"], model_dict[\"gnn_layers\"]\n",
+    "#     mh, ml       = model_dict[\"mlp_hidden\"], model_dict[\"mlp_layers\"]\n",
+    "#     model_suffix = f\"go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml}\"\n",
+    "#     train_model(model_class=Classical2PCGNN, model_dict=model_dict, model_suffix=model_suffix, graph=True)\n",
     "\n",
-    "    # QFCGNN\n",
-    "    cf[\"lr\"]        =  1E-4\n",
-    "    max_sig_ptcs    = max(ak.count(sig_events[\"fast_pt\"], axis=1))\n",
-    "    max_bkg_ptcs    = max(ak.count(bkg_events[\"fast_pt\"], axis=1))\n",
-    "    gnn_idx_qubits  = int(np.ceil(np.log2(max(max_sig_ptcs, max_bkg_ptcs))))\n",
-    "    model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":1, \"gnn_layers\":0, \"gnn_reupload\":0}\n",
-    "    qidx, qnn       = gnn_idx_qubits, model_dict[\"gnn_nn_qubits\"]\n",
-    "    gl, gr          = model_dict[\"gnn_layers\"], model_dict[\"gnn_reupload\"]\n",
-    "    model_suffix    = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
-    "    train_model(model_class=QuantumRotFCGNN, model_dict=model_dict, model_suffix=model_suffix, graph=False)"
+    "# QFCGNN\n",
+    "max_sig_ptcs    = max(ak.count(sig_events[\"fast_pt\"], axis=1))\n",
+    "max_bkg_ptcs    = max(ak.count(bkg_events[\"fast_pt\"], axis=1))\n",
+    "gnn_idx_qubits  = int(np.ceil(np.log2(max(max_sig_ptcs, max_bkg_ptcs))))\n",
+    "cf[\"lr\"]        = 1E-4\n",
+    "model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":1, \"gnn_layers\":0, \"gnn_reupload\":0}\n",
+    "qidx, qnn       = gnn_idx_qubits, model_dict[\"gnn_nn_qubits\"]\n",
+    "gl, gr          = model_dict[\"gnn_layers\"], model_dict[\"gnn_reupload\"]\n",
+    "model_suffix    = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
+    "train_model(model_class=QuantumRotFCGNN, model_dict=model_dict, model_suffix=model_suffix, graph=False)"
    ]
   }
  ],
