--- a/r_wandb_api_run.ipynb
+++ b/r_wandb_api_run.ipynb
@@ -9,21 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QuantumRotFCGNN_qidx3_qnn6_gl1_gr3 | BB-QCD_cut(800, 1000)_ptc8_bin10-500_R0 | 20231103_test_3080_0_\n"
+     ]
+    }
+   ],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20231027_091149\"\n",
+    "date    = \"20231103_test_3080\"\n",
     "suffix  = \"\"\n",
-    "project = \"g_eflow_QFCGNN\"\n",
+    "project = \"g_main\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    if date in run.id and suffix in run.id:\n",
     "        print(run.id)\n",
-    "        run.delete()\n",
+    "        # run.delete()\n",
     "    # elif run.id is None:\n",
     "    #     print(run.id)"
    ]
