--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -345,8 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":8}\n",
-    "# data_info = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":8}\n",
+    "# data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
+    "data_info = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
     "\n",
     "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
@@ -379,8 +379,8 @@
     "max_sig_ptcs    = max(ak.count(sig_events[\"fast_pt\"], axis=1))\n",
     "max_bkg_ptcs    = max(ak.count(bkg_events[\"fast_pt\"], axis=1))\n",
     "gnn_idx_qubits  = int(np.ceil(np.log2(max(max_sig_ptcs, max_bkg_ptcs))))\n",
-    "cf[\"lr\"]        = 1E-4\n",
-    "model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":1, \"gnn_layers\":0, \"gnn_reupload\":0}\n",
+    "cf[\"lr\"]        = 1E-3\n",
+    "model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":6, \"gnn_layers\":1, \"gnn_reupload\":9}\n",
     "qidx, qnn       = gnn_idx_qubits, model_dict[\"gnn_nn_qubits\"]\n",
     "gl, gr          = model_dict[\"gnn_layers\"], model_dict[\"gnn_reupload\"]\n",
     "model_suffix    = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
