--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -74,7 +74,7 @@
     "cf = {}\n",
     "cf[\"time\"]     = input(\"Type a date time or leave it space to use default date time: \")\n",
     "cf[\"device\"]   = input(\"Enter the device (3080, 4090, slurm, node, etc.): \")\n",
-    "cf[\"wandb\"]    = True # <-----------------------------------------------\n",
+    "cf[\"wandb\"]    = False # <-----------------------------------------------\n",
     "cf[\"project\"]  = \"g_main\"\n",
     "\n",
     "# training configuration\n",
@@ -353,8 +353,8 @@
     "\n",
     "L.seed_everything(cf[\"rnd_seed\"])\n",
     "\n",
-    "sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
-    "bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
+    "sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"])\n",
+    "bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"])\n",
     "data_suffix = f\"{data_info['abbrev']}_cut{data_info['cut']}_ptc{data_info['num_pt_ptcs']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
     "\n",
     "def train_model(model_class, model_dict, model_suffix, graph, suffix=\"\"):\n",
@@ -366,25 +366,26 @@
     "    train_info.update(data_info)\n",
     "    train_wandb(model, data_module, train_info, graph=graph, suffix=suffix)\n",
     "\n",
-    "# # classical ML only\n",
-    "# for gnn_out, gnn_layers in product([3,6,9], [1,2,4,8,12]):\n",
-    "#     cf[\"lr\"]     =  1E-3\n",
-    "#     model_dict   = {\"gnn_in\":6, \"gnn_out\":gnn_out, \"gnn_hidden\":gnn_out, \"gnn_layers\":gnn_layers, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
-    "#     go, gh, gl   = model_dict[\"gnn_out\"], model_dict[\"gnn_hidden\"], model_dict[\"gnn_layers\"]\n",
-    "#     mh, ml       = model_dict[\"mlp_hidden\"], model_dict[\"mlp_layers\"]\n",
-    "#     model_suffix = f\"go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml}\"\n",
-    "#     train_model(model_class=Classical2PCGNN, model_dict=model_dict, model_suffix=model_suffix, graph=True)\n",
+    "# classical ML only\n",
+    "for gnn_out in [3,6,9]:\n",
+    "    gnn_layers   = 2\n",
+    "    cf[\"lr\"]     = 1E-3\n",
+    "    model_dict   = {\"gnn_in\":6, \"gnn_out\":gnn_out, \"gnn_hidden\":gnn_out, \"gnn_layers\":gnn_layers, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
+    "    go, gh, gl   = model_dict[\"gnn_out\"], model_dict[\"gnn_hidden\"], model_dict[\"gnn_layers\"]\n",
+    "    mh, ml       = model_dict[\"mlp_hidden\"], model_dict[\"mlp_layers\"]\n",
+    "    model_suffix = f\"go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml}\"\n",
+    "    train_model(model_class=Classical2PCGNN, model_dict=model_dict, model_suffix=model_suffix, graph=True)\n",
     "\n",
-    "# QFCGNN\n",
-    "max_sig_ptcs    = max(ak.count(sig_events[\"fast_pt\"], axis=1))\n",
-    "max_bkg_ptcs    = max(ak.count(bkg_events[\"fast_pt\"], axis=1))\n",
-    "gnn_idx_qubits  = int(np.ceil(np.log2(max(max_sig_ptcs, max_bkg_ptcs))))\n",
-    "cf[\"lr\"]        = 1E-3\n",
-    "model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":6, \"gnn_layers\":1, \"gnn_reupload\":9}\n",
-    "qidx, qnn       = gnn_idx_qubits, model_dict[\"gnn_nn_qubits\"]\n",
-    "gl, gr          = model_dict[\"gnn_layers\"], model_dict[\"gnn_reupload\"]\n",
-    "model_suffix    = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
-    "train_model(model_class=QuantumRotFCGNN, model_dict=model_dict, model_suffix=model_suffix, graph=False)"
+    "# # QFCGNN\n",
+    "# max_sig_ptcs    = max(ak.count(sig_events[\"fast_pt\"], axis=1))\n",
+    "# max_bkg_ptcs    = max(ak.count(bkg_events[\"fast_pt\"], axis=1))\n",
+    "# gnn_idx_qubits  = int(np.ceil(np.log2(max(max_sig_ptcs, max_bkg_ptcs))))\n",
+    "# cf[\"lr\"]        = 1E-3\n",
+    "# model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":6, \"gnn_layers\":1, \"gnn_reupload\":9}\n",
+    "# qidx, qnn       = gnn_idx_qubits, model_dict[\"gnn_nn_qubits\"]\n",
+    "# gl, gr          = model_dict[\"gnn_layers\"], model_dict[\"gnn_reupload\"]\n",
+    "# model_suffix    = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
+    "# train_model(model_class=QuantumRotFCGNN, model_dict=model_dict, model_suffix=model_suffix, graph=False)"
    ]
   }
  ],
