20231116 ---Purge to QCGNN--- (retain QRotFCGNN)

--- a/demo_hdf5.ipynb
+++ b/demo_hdf5.ipynb
@@ -2,11 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#--------------------------------------------------------------------------\n",
+      "#                         FastJet release 3.4.0\n",
+      "#                 M. Cacciari, G.P. Salam and G. Soyez                  \n",
+      "#     A software package for jet finding and analysis at colliders      \n",
+      "#                           http://fastjet.fr                           \n",
+      "#\t                                                                      \n",
+      "# Please cite EPJC72(2012)1896 [arXiv:1111.6097] if you use this package\n",
+      "# for scientific work and optionally PLB641(2006)57 [hep-ph/0512210].   \n",
+      "#                                                                       \n",
+      "# FastJet is provided without warranty under the GNU GPL v2 or higher.  \n",
+      "# It uses T. Chan's closest pair algorithm, S. Fortune's Voronoi code,\n",
+      "# CGAL and 3rd party plugin jet algorithms. See COPYING file for details.\n",
+      "#--------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
-    "import d_mg5_data\n",
+    "import module_data\n",
     "import awkward as ak\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -16,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +49,13 @@
       "DataLog: Successfully loading hdf5 file VzToZhToVevebb|c800_1000_r0.1.hdf5\n",
       "DataLog: Now loading hdf5 file VzToZhToVevebb|c800_1000_r0.2.hdf5\n",
       "DataLog: Successfully loading hdf5 file VzToZhToVevebb|c800_1000_r0.2.hdf5\n",
-      "DataLog: Now loading hdf5 file VzToZhToVevebb|c800_1000_r0.3.hdf5\n",
+      "DataLog: Now loading hdf5 file VzToZhToVevebb|c800_1000_r0.3.hdf5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "DataLog: Successfully loading hdf5 file VzToZhToVevebb|c800_1000_r0.3.hdf5\n",
       "DataLog: Now loading hdf5 file VzToZhToVevebb|c800_1000_r0.4.hdf5\n",
       "DataLog: Successfully loading hdf5 file VzToZhToVevebb|c800_1000_r0.4.hdf5\n",
@@ -59,7 +85,7 @@
    "source": [
     "Rs       = [0, 0.1, 0.2, 0.3, 0.4]\n",
     "channels = [\"VzToZhToVevebb\", \"VzToQCD\", \"VzToTt\"]\n",
-    "events   = [[d_mg5_data.FatJetEvents(channel=c, cut_pt=(800,1000), subjet_radius=R) for R in Rs] for c in channels]\n",
+    "events   = [[module_data.FatJetEvents(channel=c, cut_pt=(800,1000), subjet_radius=R) for R in Rs] for c in channels]\n",
     "\n",
     "num_radius   = len(Rs)\n",
     "num_channels = len(channels)"
@@ -67,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
