--- a/demo_mg5.ipynb
+++ b/demo_mg5.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo for d_mg5_data.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Setup"
+    "# Demo for reading MG5 file"
    ]
   },
   {
@@ -36,7 +29,7 @@
     }
    ],
    "source": [
-    "import d_mg5_data\n",
+    "import module_data\n",
     "import awkward as ak\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -44,7 +37,7 @@
     "sns.set_theme()\n",
     "\n",
     "channels = [\"VzToZhToVevebb\", \"VzToQCD\", \"VzToTt\"]\n",
-    "fatjet_events = [d_mg5_data.FatJetEvents(channel, check_hdf5=False) for channel in channels]"
+    "fatjet_events = [module_data.FatJetEvents(channel, check_hdf5=False) for channel in channels]"
    ]
   },
   {
@@ -74,7 +67,7 @@
    ],
    "source": [
     "fig, ax     = plt.subplots(1, len(channels), figsize=(4*len(channels), 2*4), facecolor=\"white\")\n",
-    "pdgid_table = d_mg5_data.pdgid_table\n",
+    "pdgid_table = module_data.pdgid_table\n",
     "pdgid_keys  = pdgid_table.keys()\n",
     "\n",
     "def draw_constituent(single_ax, events):\n",
