--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -9,22 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "QuantumRotFCGNN_qidx3_qnn6_gl1_gr3 | BB-QCD_cut(800, 1000)_ptc8_bin10-500_R0 | 20231103_test_3080_0_\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20231103_test_3080\"\n",
+    "date    = \"20231357\"\n",
     "suffix  = \"\"\n",
     "project = \"g_main\"\n",
     "\n",
