20231122 Pennylane-Qiskit plugin (IBMQ Encoding)

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -29,6 +29,8 @@
     "# qml\n",
     "import pennylane as qml\n",
     "from pennylane import numpy as np\n",
+    "print(f\"\\nPennylane default config path  = {qml.default_config.path}\")\n",
+    "print(f\"Pennylane default config setup = {qml.default_config}\\n\")\n",
     "\n",
     "# pytorch\n",
     "import torch\n",
@@ -64,11 +66,25 @@
    "source": [
     "# global settings\n",
     "config = {}\n",
-    "config[\"wandb\"]    = False # <-----------------------------------------------\n",
-    "config[\"time\"]     = input(\"Specify a datetime or leave empty (default current time): \") or time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
-    "config[\"device\"]   = input(\"Enter the computing device (4090, slurm, node, etc.)    : \")\n",
-    "config[\"project\"]  = \"g_main\"\n",
-    "config[\"rnd_seed\"] = int(input(\"Set random seed = \"))\n",
+    "config[\"wandb\"]    = True # <-----------------------------------------------\n",
+    "# config[\"time\"]     = input(\"Specify a datetime or leave empty (default current time): \") or time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
+    "# config[\"device\"]   = input(\"Enter the computing device (4090, slurm, node, etc.)    : \")\n",
+    "# config[\"project\"]  = \"g_main\"\n",
+    "# config[\"suffix\"]   = \"\"\n",
+    "# config[\"rnd_seed\"] = int(input(\"Set random seed = \"))\n",
+    "# config[\"qdevice\"]  = \"default.qubit\"\n",
+    "# config[\"qbackend\"] = \"\"\n",
+    "\n",
+    "# test\n",
+    "# config[\"time\"]     = \"20231123\"\n",
+    "# config[\"device\"]   = \"4090\"\n",
+    "# config[\"project\"]  = \"g_main\"\n",
+    "# config[\"suffix\"]   = \"qml_qiskit_enc\"\n",
+    "# config[\"rnd_seed\"] = 0\n",
+    "# config[\"qdevice\"]  = \"default.qubit\"\n",
+    "# config[\"qdevice\"]  = \"qiskit.ibmq\"\n",
+    "# config[\"qbackend\"] = \"ibmq_qasm_simulator\"\n",
+    "# config[\"use_qiskit_enc\"] = True\n",
     "\n",
     "# # parser (if needed)\n",
     "# parser = argparse.ArgumentParser(description='argparse for slurm')\n",
@@ -219,18 +235,54 @@
    "outputs": [],
    "source": [
     "class QuantumRotFCGNN(nn.Module):\n",
-    "    def __init__(self, num_ir_qubits, num_nr_qubits, num_layers, num_reupload, **kwargs):\n",
+    "    def __init__(self, num_ir_qubits, num_nr_qubits, num_layers, num_reupload, device=\"default.qubit\", backend=\"ibmq_qasm_simulator\", **kwargs):\n",
     "        super().__init__()\n",
-    "        # rotation encoding\n",
-    "        def ctrl_rot_encoding(_input, control, control_values):\n",
+    "        # rotation encoding on pennylane simulator\n",
+    "        def qml_encoding(_input, control_values):\n",
     "            for i in range(num_nr_qubits):\n",
-    "                ctrl_H = qml.ctrl(qml.Hadamard, control=control, control_values=control_values)\n",
+    "                ctrl_H = qml.ctrl(qml.Hadamard, control=range(num_ir_qubits), control_values=control_values)\n",
     "                ctrl_H(wires=num_ir_qubits+i)\n",
-    "                ctrl_R = qml.ctrl(qml.Rot, control=control, control_values=control_values)\n",
+    "                ctrl_R = qml.ctrl(qml.Rot, control=range(num_ir_qubits), control_values=control_values)\n",
     "                ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=num_ir_qubits+i)\n",
     "        \n",
+    "        # rotation encoding on qiskit\n",
+    "        num_wk_qubits = num_ir_qubits - 1\n",
+    "        def qiskit_encoding(_input, control_values):\n",
+    "            theta, phi, omega = _input[0], _input[1], _input[2]\n",
+    "            # see N.C. page.184\n",
+    "            for i in range(num_nr_qubits):\n",
+    "                # control values\n",
+    "                for q in range(num_ir_qubits):\n",
+    "                    if control_values[q] == 0:\n",
+    "                        qml.PauliX(wires=q)\n",
+    "                # toffoli transformation\n",
+    "                if num_ir_qubits >= 2:\n",
+    "                    qml.Toffoli(wires=(0, 1, num_ir_qubits))\n",
+    "                for q in range(num_wk_qubits-1):\n",
+    "                    qml.Toffoli(wires=(2+q, num_ir_qubits+q, num_ir_qubits+1+q))\n",
+    "                # ctrl_H: decomposed by H = i Rx(pi) Ry(pi/2) (if complete graph with power of 2 nodes -> relative phase i becomes global)\n",
+    "                target_qubit = num_ir_qubits + num_wk_qubits + i\n",
+    "                qml.CRY(np.pi/2, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
+    "                qml.CRX(np.pi, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
+    "                # ctrl_R: Rot(phi, theta, omega) = Rz(omega) Ry(theta) Rz(phi)\n",
+    "                qml.CRZ(phi, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
+    "                qml.CRY(theta, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
+    "                qml.CRZ(omega, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
+    "                # toffoli inverse transformation\n",
+    "                for q in reversed(range(num_wk_qubits-1)):\n",
+    "                    qml.Toffoli(wires=(2+q, num_ir_qubits+q, num_ir_qubits+1+q))\n",
+    "                if num_ir_qubits >= 2:\n",
+    "                    qml.Toffoli(wires=(0, 1, num_ir_qubits))\n",
+    "                # control values\n",
+    "                for q in range(num_ir_qubits):\n",
+    "                    if control_values[q] == 0:\n",
+    "                        qml.PauliX(wires=q)\n",
+    "\n",
     "        # constructing QCGNN like a MPGNN\n",
-    "        self.phi = module_model.QCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc_gate=ctrl_rot_encoding)\n",
+    "        if \"qiskit\" in device or config[\"use_qiskit_enc\"]:\n",
+    "            self.phi = module_model.QCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc=qiskit_encoding, device=device, backend=backend)\n",
+    "        else:\n",
+    "            self.phi = module_model.QCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc=qml_encoding, device=device)\n",
     "        self.mlp = module_model.ClassicalMLP(in_channel=num_nr_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
     "    \n",
     "    def forward(self, x):\n",
@@ -262,10 +314,13 @@
     "        logger_config = {}\n",
     "        logger_config[\"project\"]  = config[\"project\"]\n",
     "        logger_config[\"group\"]    = f\"{data_config['sig']}_{data_config['bkg']}\"\n",
-    "        logger_config[\"name\"]     = f\"{model_config['group_rnd']} | {config['time']}_{config['device']}_{config['rnd_seed']} {suffix}\"\n",
+    "        if \"qiskit\" in config['qdevice']:\n",
+    "            logger_config[\"name\"]     = f\"{model_config['group_rnd']} | {config['time']}_{config['qdevice']}_{config['rnd_seed']} {suffix}\"\n",
+    "        else:\n",
+    "            logger_config[\"name\"]     = f\"{model_config['group_rnd']} | {config['time']}_{config['device']}_{config['rnd_seed']} {suffix}\"\n",
     "        logger_config[\"id\"]       = logger_config[\"name\"]\n",
     "        logger_config[\"save_dir\"] = result_dir\n",
-    "        logger = module_training.wandb_monitor(model, logger_config, config, model_config)\n",
+    "        logger = module_training.wandb_monitor(model, logger_config, config, model_config, data_config)\n",
     "    else:\n",
     "        logger = None\n",
     "\n",
@@ -304,42 +359,36 @@
    "source": [
     "# data_config = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
     "data_config = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
+    "# data_config = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":2}\n",
     "\n",
     "sig_fatjet_events = module_data.FatJetEvents(channel=data_config[\"sig\"], cut_pt=data_config[\"cut\"], subjet_radius=data_config[\"subjet_radius\"], num_pt_ptcs=data_config[\"num_pt_ptcs\"])\n",
     "bkg_fatjet_events = module_data.FatJetEvents(channel=data_config[\"bkg\"], cut_pt=data_config[\"cut\"], subjet_radius=data_config[\"subjet_radius\"], num_pt_ptcs=data_config[\"num_pt_ptcs\"])\n",
     "\n",
-    "L.seed_everything(config[\"rnd_seed\"])\n",
-    "sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
-    "bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
-    "data_suffix = f\"{data_config['abbrev']}_cut{data_config['cut']}_ptc{data_config['num_pt_ptcs']}_bin{data_config['bin']}-{data_config['num_bin_data']}_R{data_config['subjet_radius']}\"\n",
-    "data_config[\"data_suffix\"] = data_suffix\n",
+    "for rnd_seed in range(3):\n",
+    "    config[\"rnd_seed\"] = rnd_seed\n",
+    "    L.seed_everything(config[\"rnd_seed\"])\n",
+    "    sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
+    "    bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
+    "    data_suffix = f\"{data_config['abbrev']}_cut{data_config['cut']}_ptc{data_config['num_pt_ptcs']}_bin{data_config['bin']}-{data_config['num_bin_data']}_R{data_config['subjet_radius']}\"\n",
+    "    data_config[\"data_suffix\"] = data_suffix\n",
     "\n",
-    "# # classical ML\n",
-    "# data_module  = JetDataModule(sig_events, bkg_events, graph=True)\n",
-    "# go, gh, gl   = 3, 3, 3\n",
-    "# mh, ml       = 0, 0\n",
-    "# model_suffix = f\"go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml}\"\n",
-    "# model_config = {\"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":mh, \"mlp_layers\":ml, \"lr\":1E-3, \"model_suffix\":model_suffix}\n",
-    "# model        = Classical2PCGNN(**model_config) \n",
-    "# train(model, model_config, data_module, data_config, graph=True, suffix=\"\")\n",
+    "    # # classical ML\n",
+    "    # data_module  = JetDataModule(sig_events, bkg_events, graph=True)\n",
+    "    # go, gh, gl   = 3, 3, 3\n",
+    "    # mh, ml       = 0, 0\n",
+    "    # model_suffix = f\"go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml}\"\n",
+    "    # model_config = {\"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":mh, \"mlp_layers\":ml, \"lr\":1E-3, \"model_suffix\":model_suffix}\n",
+    "    # model        = Classical2PCGNN(**model_config) \n",
+    "    # train(model, model_config, data_module, data_config, graph=True, suffix=config[\"suffix\"])\n",
     "\n",
-    "# # QFCGNN\n",
-    "# data_module   = JetDataModule(sig_events, bkg_events, graph=False)\n",
-    "# qir, qnr      = int(np.ceil(np.log2(data_config[\"num_pt_ptcs\"]))), 2\n",
-    "# nl, nr        = 1, 1\n",
-    "# model_suffix  = f\"qir{qir}_qnr{qnr}_nl{nl}_nr{nr}\"\n",
-    "# model_config  = {\"num_ir_qubits\":qir, \"num_nr_qubits\":qnr, \"num_layers\":nl, \"num_reupload\":nr, \"lr\":1E-2, \"model_suffix\":model_suffix}\n",
-    "# model         = QuantumRotQCGNN(**model_config)\n",
-    "# train(model, model_config, data_module, data_config, graph=False, suffix=\"\")\n",
-    "\n",
-    "# QFCGNN\n",
-    "data_module   = JetDataModule(sig_events, bkg_events, graph=False)\n",
-    "qidx, qnn     = int(np.ceil(np.log2(data_config[\"num_pt_ptcs\"]))), 3\n",
-    "gl, gr        = 1, 1\n",
-    "model_suffix  = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
-    "model_config  = {\"gnn_idx_qubits\":qidx, \"gnn_nn_qubits\":qnn, \"gnn_layers\":gl, \"gnn_reupload\":gr, \"lr\":1E-3, \"model_suffix\":model_suffix}\n",
-    "model         = QuantumRotFCGNN(num_ir_qubits=qidx, num_nr_qubits=qnn, num_layers=gl, num_reupload=gr)\n",
-    "train(model, model_config, data_module, data_config, graph=False, suffix=\"\")"
+    "    # QFCGNN\n",
+    "    data_module   = JetDataModule(sig_events, bkg_events, graph=False)\n",
+    "    qidx, qnn     = int(np.ceil(np.log2(data_config[\"num_pt_ptcs\"]))), 3\n",
+    "    gl, gr        = 1, 3\n",
+    "    model_suffix  = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
+    "    model_config  = {\"gnn_idx_qubits\":qidx, \"gnn_nn_qubits\":qnn, \"gnn_layers\":gl, \"gnn_reupload\":gr, \"lr\":1E-2, \"model_suffix\":model_suffix}\n",
+    "    model         = QuantumRotFCGNN(num_ir_qubits=qidx, num_nr_qubits=qnn, num_layers=gl, num_reupload=gr, device=config[\"qdevice\"], backend=config[\"qbackend\"])\n",
+    "    train(model, model_config, data_module, data_config, graph=False, suffix=config[\"suffix\"])"
    ]
   }
  ],
